--- a/figures/Figure_2C/UMAP_Expression.Rmd
+++ b/figures/Figure_2C/UMAP_Expression.Rmd
@@ -1,9 +1,9 @@
 ---
 title: "Emma Pan Neuro (Control + ND75KD)"
-description: "Figure 2D"
+description: "Figure 2C"
 author: "Vincent Gardeux"
 date: "2025/01/24"
-updated: "2025/01/24"
+updated: "2025/02/17"
 output:
   html_document:
     df_print: paged
@@ -51,7 +51,7 @@ set.seed(42)
 
 ```{r}
 input_seurat_object <- "./data/Pan_neuro_integrated_FINAL.rds"
-output_figure_prefix <- "./figures/Figure_2D/"
+output_figure_prefix <- "./figures/Figure_2C/"
 ```
 
 ## I. Reading Seurat object
