--- a/figures/Figure_5A/AUC_Oxphos_68_Porcelli_FCA.Rmd
+++ b/figures/Figure_5A/AUC_Oxphos_68_Porcelli_FCA.Rmd
@@ -2,8 +2,8 @@
 title: "Emma Pan Neuro (Control + ND75KD)"
 description: "Figure 5A - FCA"
 author: "Vincent Gardeux"
-date: "2025/01/31"
-updated: "2025/02/13"
+date: "2025/02/13"
+updated: "2025/02/17"
 output:
   html_document:
     df_print: paged
@@ -51,7 +51,8 @@ set.seed(42)
 ## Parameters
 
 ```{r}
-input_seurat_object <- "./data/Pan_neuro_integrated_FINAL.rds"
+input_seurat_object <- "./data/Fly_Cell_Atlas__Head_Stringent.rds"
+input_Oxphos_68_AUCell_values_path <- "./data/FCA_68_Oxphos_AUCell_auc.tsv"
 output_figure_prefix <- "./figures/Figure_5A/"
 ```
 
@@ -66,98 +67,53 @@ message(ncol(data.seurat), " cells were loaded")
 message(nrow(data.seurat), " genes were loaded")
 ```
 
+## II.1 Reading OXPHOS AUC values from AUCell (using the 68 OXPHOS genes from Porcelli et al. https://link.springer.com/article/10.1186/1471-2148-7-215)
+
+```{r}
+data.auc <- fread(input_Oxphos_68_AUCell_values_path, data.table = F)
+rownames(data.auc) <- data.auc$Cell
+data.auc
+```
+
+## II.2 Adding to Seurat object
+
+```{r}
+data.seurat$AUC_OXPHOS_68_Porcelli <- data.auc[colnames(data.seurat), "AUC"]
+hist(data.seurat$AUC_OXPHOS_68_Porcelli, breaks = 100)
+```
+
 ## Boxplot (Control + ND-75 KD)
 
 ```{r, fig.width=15,fig.height=5}
 # Extracting the relevant metadata
 boxplot_data <- as.data.frame(data.seurat@meta.data)
 
-# Calculating median values of "AUC_OXPHOS_68_Porcelli" for each group
-median_values <- tapply(boxplot_data$AUC_OXPHOS_68_Porcelli, boxplot_data$annotation_clusters, median)
-
-# Sorting the metadata based on median values
-boxplot_data$annotation_clusters <- factor(boxplot_data$annotation_clusters, levels = names(sort(median_values, decreasing = F)))
-
-# Plot
-p <- ggplot(boxplot_data, aes(x = annotation_clusters, y = AUC_OXPHOS_68_Porcelli, fill = annotation_clusters)) +
-  geom_boxplot() +
-  labs(x = NULL, y = "AUC_OXPHOS_68_Porcelli") +
-  #theme_minimal() + theme(axis.text.x = element_text(angle = 45, hjust = 1)) +
-  theme_minimal() + theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1)) +
-  #scale_fill_manual(values = annotatedClusterPalette) +
-  scale_fill_manual(values = annotationClustersPalette) +
-  NoLegend()
-
-p
-```
-
-```{r}
-ggsave(p, filename = paste0(output_figure_prefix, "Oxphos_68_ordered_boxplot.pdf"), width = 15, height = 5, bg = "white")
-ggsave(p, filename = paste0(output_figure_prefix, "Oxphos_68_ordered_boxplot.png"), width = 15, height = 5, dpi = 1000, bg = 'white')
-```
-
-## Boxplot (Control only)
-
-```{r, fig.width=15,fig.height=5}
-# Extracting the relevant metadata
-boxplot_data <- as.data.frame(data.seurat[,data.seurat$orig.ident == "Pan_neuro_control"]@meta.data)
-
 # Filter out <5 cells per annotation
-boxplot_data <- boxplot_data[boxplot_data$seurat_clusters %in% names(which(table(boxplot_data$seurat_clusters) >= 5)),]
+boxplot_data <- boxplot_data[boxplot_data$annotation %in% names(which(table(boxplot_data$annotation) >= 5)),]
+
+# Filter out artefact & unnanotated
+boxplot_data <- boxplot_data[!boxplot_data$annotation %in% c("unannotated", "artefact"),]
 
 # Calculating median values of "AUC_OXPHOS_68_Porcelli" for each group
-median_values <- tapply(boxplot_data$AUC_OXPHOS_68_Porcelli, boxplot_data$annotation_clusters, median)
+median_values <- tapply(boxplot_data$AUC_OXPHOS_68_Porcelli, boxplot_data$annotation, median)
 
 # Sorting the metadata based on median values
-boxplot_data$annotation_clusters <- factor(boxplot_data$annotation_clusters, levels = names(sort(median_values, decreasing = F)))
+boxplot_data$annotation <- factor(boxplot_data$annotation, levels = names(sort(median_values, decreasing = F)))
 
 # Plot
-p <- ggplot(boxplot_data, aes(x = annotation_clusters, y = AUC_OXPHOS_68_Porcelli, fill = annotation_clusters)) +
+p <- ggplot(boxplot_data, aes(x = annotation, y = AUC_OXPHOS_68_Porcelli, fill = annotation)) +
   geom_boxplot() +
   labs(x = NULL, y = "AUC_OXPHOS_68_Porcelli") +
   #theme_minimal() + theme(axis.text.x = element_text(angle = 45, hjust = 1)) +
   theme_minimal() + theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1)) +
   #scale_fill_manual(values = annotatedClusterPalette) +
-  scale_fill_manual(values = annotationClustersPalette) +
+  #scale_fill_manual(values = annotationClustersPalette) +
   NoLegend()
 
 p
 ```
 
 ```{r}
-ggsave(p, filename = paste0(output_figure_prefix, "Oxphos_68_ordered_boxplot_control-only.pdf"), width = 15, height = 5, bg = "white")
-ggsave(p, filename = paste0(output_figure_prefix, "Oxphos_68_ordered_boxplot_control-only.png"), width = 15, height = 5, dpi = 1000, bg = 'white')
-```
-
-## Boxplot (ND-75 KD only)
-
-```{r, fig.width=15,fig.height=5}
-# Extracting the relevant metadata
-boxplot_data <- as.data.frame(data.seurat[,data.seurat$orig.ident == "Pan_neuro_ND75KD"]@meta.data)
-
-# Filter out <5 cells per annotation
-boxplot_data <- boxplot_data[boxplot_data$seurat_clusters %in% names(which(table(boxplot_data$seurat_clusters) >= 5)),]
-
-# Calculating median values of "AUC_OXPHOS_68_Porcelli" for each group
-median_values <- tapply(boxplot_data$AUC_OXPHOS_68_Porcelli, boxplot_data$annotation_clusters, median)
-
-# Sorting the metadata based on median values
-boxplot_data$annotation_clusters <- factor(boxplot_data$annotation_clusters, levels = names(sort(median_values, decreasing = F)))
-
-# Plot
-p <- ggplot(boxplot_data, aes(x = annotation_clusters, y = AUC_OXPHOS_68_Porcelli, fill = annotation_clusters)) +
-  geom_boxplot() +
-  labs(x = NULL, y = "AUC_OXPHOS_68_Porcelli") +
-  #theme_minimal() + theme(axis.text.x = element_text(angle = 45, hjust = 1)) +
-  theme_minimal() + theme(axis.text.x = element_text(angle = 90, vjust = 0.5, hjust=1)) +
-  #scale_fill_manual(values = annotatedClusterPalette) +
-  scale_fill_manual(values = annotationClustersPalette) +
-  NoLegend()
-
-p
-```
-
-```{r}
-ggsave(p, filename = paste0(output_figure_prefix, "Oxphos_68_ordered_boxplot_nd75kd-only.pdf"), width = 15, height = 5, bg = "white")
-ggsave(p, filename = paste0(output_figure_prefix, "Oxphos_68_ordered_boxplot_nd75kd-only.png"), width = 15, height = 5, dpi = 1000, bg = 'white')
+ggsave(p, filename = paste0(output_figure_prefix, "FCA_HEAD_Oxphos_68_ordered_boxplot.pdf"), width = 15, height = 5, bg = "white")
+ggsave(p, filename = paste0(output_figure_prefix, "FCA_HEAD_Oxphos_68_ordered_boxplot.png"), width = 15, height = 5, dpi = 1000, bg = 'white')
 ```
