--- a/preprocessing/S2c_Fly_Cell_Atlas_HEAD_Oxphos_scoring_AUCell_68.ipynb
+++ b/preprocessing/S2c_Fly_Cell_Atlas_HEAD_Oxphos_scoring_AUCell_68.ipynb
@@ -36,9 +36,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "GENE_SIGNATURE_FNAME = '/data/gardeux/Neuro_Droso_ND75KD/data/Oxphos_genes.xlsx'\n",
+    "GENE_SIGNATURE_FNAME = './data/Oxphos_genes.xlsx'\n",
     "GENE_SIGNATURE_SNAME = '68 OXPHOS genes'\n",
-    "EXPRESSION_MTX_FNAME = '/data/gardeux/Neuro_Droso_ND75KD/data/s_fca_biohub_head_10x.loom' # From https://cloud.flycellatlas.org/index.php/s/jtH5fGwLqtiSRSD"
+    "EXPRESSION_MTX_FNAME = './data/s_fca_biohub_head_10x.loom' # From https://cloud.flycellatlas.org/index.php/s/jtH5fGwLqtiSRSD"
    ]
   },
   {
@@ -284,6 +284,27 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "76cf3643-b72c-4da2-85bd-a80eede5d187",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "68"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(gs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "44ca7845",
    "metadata": {},
    "outputs": [
@@ -299,7 +320,7 @@
        "       [ 0.,  0.,  0., ...,  0.,  0.,  0.]], dtype=float32)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -317,7 +338,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "abab122e",
    "metadata": {},
    "outputs": [
@@ -327,7 +348,7 @@
        "(13056, 100527)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -338,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "19cdc61e",
    "metadata": {},
    "outputs": [
@@ -353,7 +374,7 @@
        "       'TTTGTTGTCGCTTGCT-f7ed0992__FCA15_Female_head_adult'], dtype=object)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -364,7 +385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "64a72090",
    "metadata": {},
    "outputs": [
@@ -374,7 +395,7 @@
        "100527"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -385,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "260d83eb",
    "metadata": {},
    "outputs": [
@@ -396,7 +417,7 @@
        "       'zye'], dtype=object)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -407,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "774324a4",
    "metadata": {},
    "outputs": [
@@ -417,7 +438,7 @@
        "13056"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -428,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "1850fc7d-cdcd-44be-b2e5-50209d9aad83",
    "metadata": {},
    "outputs": [
@@ -443,7 +464,7 @@
    ],
    "source": [
     "# [Input] Fixed gene annotation (for SCENIC feather file compatibility)\n",
-    "genome_data = pd.read_csv(\"/data/gardeux/Neuro_Droso_ND75KD/data/dmel-all-r6.31-premrna.gene_mapping.txt\", sep=\"\\t\", na_filter=False)\n",
+    "genome_data = pd.read_csv(\"./data/dmel-all-r6.31-premrna.gene_mapping.txt\", sep=\"\\t\", na_filter=False)\n",
     "\n",
     "# Update gene names using fixing table\n",
     "gene_to_ensembl_dict = genome_data.set_index('gene_name')['gene_id'].to_dict()\n",
@@ -463,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "64806a23-804d-426b-8531-8c4df6cd373c",
    "metadata": {},
    "outputs": [
@@ -473,7 +494,7 @@
        "13056"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -484,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "e490973f",
    "metadata": {},
    "outputs": [
@@ -1066,7 +1087,7 @@
        "[13056 rows x 100527 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1078,7 +1099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "ce400181",
    "metadata": {},
    "outputs": [
@@ -1086,29 +1107,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[]\n"
+      "['FBgn0034877', 'FBgn0011361', 'FBgn0031771', 'FBgn0019624', 'FBgn0035046', 'FBgn0261439', 'FBgn0034576', 'FBgn0016119', 'FBgn0039909', 'FBgn0031021', 'FBgn0010612', 'FBgn0030718', 'FBgn0010217', 'FBgn0021906', 'FBgn0031830', 'FBgn0039830', 'FBgn0016120', 'FBgn0034245', 'FBgn0035032', 'FBgn0034645', 'FBgn0030853', 'FBgn0040529', 'FBgn0030733', 'FBgn0016691', 'FBgn0047038', 'FBgn0017566', 'FBgn0033570', 'FBgn0021967', 'FBgn0037873', 'FBgn0032833', 'FBgn0031505', 'FBgn0019644', 'FBgn0029868', 'FBgn0020235', 'FBgn0031684', 'FBgn0260008', 'FBgn0029888', 'FBgn0019957', 'FBgn0036728', 'FBgn0038224', 'FBgn0040773', 'FBgn0038271', 'FBgn0011455', 'FBgn0085468', 'FBgn0014391', 'FBgn0266582', 'FBgn0039112', 'FBgn0029971', 'FBgn0017567', 'FBgn0031066', 'FBgn0037001', 'FBgn0015031', 'FBgn0035600', 'FBgn0031436', 'FBgn0011211', 'FBgn0025839', 'FBgn0011227', 'FBgn0032511', 'FBgn0052230', 'FBgn0001989', 'FBgn0030605', 'FBgn0014028', 'FBgn0031228', 'FBgn0033961', 'FBgn0058002', 'FBgn0250814', 'FBgn0028342']\n"
      ]
     }
    ],
    "source": [
     "# Compute the intersection\n",
-    "intersection = list(set(gene_names).intersection(set(data_excel[\"Gene_Ensembl_ID\"].tolist())))\n",
+    "intersection = list(set(gene_names_updated).intersection(set(data_excel[\"Gene_Ensembl_ID\"].tolist())))\n",
     "print(intersection)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "709e966d",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0"
+       "67"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1119,7 +1140,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
+   "id": "b90fa075-d45b-49dd-a603-bacade025704",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['FBgn0040705']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Compute the genes that don't overlap in the other direction\n",
+    "difference_reverse = list(set(data_excel[\"Gene_Ensembl_ID\"].tolist()).difference(set(gene_names_updated)))\n",
+    "print(difference_reverse)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1093ea54-61e9-4767-96f6-168aa0c6deb9",
+   "metadata": {},
+   "source": [
+    "ND-B8 (FBgn0040705) is missing from the Fly-Cell-Atlas dataset. It is in the mapping file, so most likely was filtered out."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
    "id": "a0884472",
    "metadata": {},
    "outputs": [],
@@ -1131,10 +1180,124 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "5244ef96",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>AUC</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Cell</th>\n",
+       "      <th>Regulon</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>AAACCCAGTTACGGAG-d541ae4e__FCA1_MaleFemale_Head</th>\n",
+       "      <th>Flybase - GO - Oxidative phosphorylation</th>\n",
+       "      <td>0.043268</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AAACCCATCCGTACGG-d541ae4e__FCA1_MaleFemale_Head</th>\n",
+       "      <th>Flybase - GO - Oxidative phosphorylation</th>\n",
+       "      <td>0.031588</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AAACGAAGTATGATCC-d541ae4e__FCA1_MaleFemale_Head</th>\n",
+       "      <th>Flybase - GO - Oxidative phosphorylation</th>\n",
+       "      <td>0.081530</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AAACGAATCACCTACC-d541ae4e__FCA1_MaleFemale_Head</th>\n",
+       "      <th>Flybase - GO - Oxidative phosphorylation</th>\n",
+       "      <td>0.012663</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AAACGCTAGAAACCAT-d541ae4e__FCA1_MaleFemale_Head</th>\n",
+       "      <th>Flybase - GO - Oxidative phosphorylation</th>\n",
+       "      <td>0.067678</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>TTTGGTTGTACGAAAT-f7ed0992__FCA15_Female_head_adult</th>\n",
+       "      <th>Flybase - GO - Oxidative phosphorylation</th>\n",
+       "      <td>0.009074</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>TTTGTTGCAACGCATT-f7ed0992__FCA15_Female_head_adult</th>\n",
+       "      <th>Flybase - GO - Oxidative phosphorylation</th>\n",
+       "      <td>0.022879</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>TTTGTTGTCATCGCCT-f7ed0992__FCA15_Female_head_adult</th>\n",
+       "      <th>Flybase - GO - Oxidative phosphorylation</th>\n",
+       "      <td>0.050102</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>TTTGTTGTCCATTCGC-f7ed0992__FCA15_Female_head_adult</th>\n",
+       "      <th>Flybase - GO - Oxidative phosphorylation</th>\n",
+       "      <td>0.014560</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>TTTGTTGTCGCTTGCT-f7ed0992__FCA15_Female_head_adult</th>\n",
+       "      <th>Flybase - GO - Oxidative phosphorylation</th>\n",
+       "      <td>0.052365</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>100527 rows × 1 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                                                                  AUC\n",
+       "Cell                                               Regulon                                           \n",
+       "AAACCCAGTTACGGAG-d541ae4e__FCA1_MaleFemale_Head    Flybase - GO - Oxidative phosphorylation  0.043268\n",
+       "AAACCCATCCGTACGG-d541ae4e__FCA1_MaleFemale_Head    Flybase - GO - Oxidative phosphorylation  0.031588\n",
+       "AAACGAAGTATGATCC-d541ae4e__FCA1_MaleFemale_Head    Flybase - GO - Oxidative phosphorylation  0.081530\n",
+       "AAACGAATCACCTACC-d541ae4e__FCA1_MaleFemale_Head    Flybase - GO - Oxidative phosphorylation  0.012663\n",
+       "AAACGCTAGAAACCAT-d541ae4e__FCA1_MaleFemale_Head    Flybase - GO - Oxidative phosphorylation  0.067678\n",
+       "...                                                                                               ...\n",
+       "TTTGGTTGTACGAAAT-f7ed0992__FCA15_Female_head_adult Flybase - GO - Oxidative phosphorylation  0.009074\n",
+       "TTTGTTGCAACGCATT-f7ed0992__FCA15_Female_head_adult Flybase - GO - Oxidative phosphorylation  0.022879\n",
+       "TTTGTTGTCATCGCCT-f7ed0992__FCA15_Female_head_adult Flybase - GO - Oxidative phosphorylation  0.050102\n",
+       "TTTGTTGTCCATTCGC-f7ed0992__FCA15_Female_head_adult Flybase - GO - Oxidative phosphorylation  0.014560\n",
+       "TTTGTTGTCGCTTGCT-f7ed0992__FCA15_Female_head_adult Flybase - GO - Oxidative phosphorylation  0.052365\n",
+       "\n",
+       "[100527 rows x 1 columns]"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# 2. Enrichment (~5s)\n",
     "aucs = enrichment(rnk_mtx, gs)\n",
@@ -1143,34 +1306,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "8a2d79f1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.0"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "min(aucs[\"AUC\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "382e224b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5611757445544102"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "max(aucs[\"AUC\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "6aec55cb",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Save DataFrame to TSV file\n",
-    "aucs.to_csv(\"./data/Pan_neuro_integrated_68_Oxphos_AUCell_auc.tsv\", sep='\\t', index=True)"
+    "aucs.to_csv(\"./data/FCA_68_Oxphos_AUCell_auc.tsv\", sep='\\t', index=True)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4412375e-3555-495b-b8f7-874f74dda9d1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
